--- a/style.css
+++ b/style.css
@@ -102,6 +102,18 @@ body {
   box-sizing: border-box;
 }
 
+.loading {
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  margin: 5px;
+  width: 200px;
+  border: 2px solid rgb(234, 234, 233);
+  border-radius: 5px;
+  box-sizing: border-box;
+  color: black;
+}
+
 .item .item__sku {
   display: none;
 }
